@startuml
'https://plantuml.com/class-diagram

interface AbstractShootStrategy{
    # hero:HeroAircraft
    + {abstract}shootStrategy(int direction, int shootNum, int power):List<BaseBullet>
}

class CommonShoot{
    + shootStrategy(int direction, int shootNum, int power):List<BaseBullet>
}
class ScatterShoot{
    + shootStrategy(int direction, int shootNum, int power):List<BaseBullet>
}

class ShootContext{
    - shootStrategy:ShootStrategy
    + ShootContext(ShootStrategy strategy)
    + setStrategy(ShootStrategy strategy):void
    + executeStrategy(int direction, int shootNum, int power):List<BaseBullet>

}
AbstractShootStrategy <|.. CommonShoot
AbstractShootStrategy <|.. ScatterShoot
ShootContext o--> AbstractShootStrategy
@enduml